Spieler (Mit Dokumentation)/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-jupiter-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\BlueJ\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\BlueJ\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\hamcrest-library-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;E:\Informatik EF\BlueJ\Spieler_Final
-d
E:\Informatik EF\BlueJ\Spieler_Final\doc
-encoding
UTF-8
-charset
UTF-8
E:\Informatik EF\BlueJ\Spieler_Final\Spieler.java
<---- end of javadoc command ---->
Loading source file E:\Informatik EF\BlueJ\Spieler_Final\Spieler.java...
Constructing Javadoc information...
E:\Informatik EF\BlueJ\Spieler_Final\Spieler.java:13: error: cannot find symbol
    private Wuerfel wuerfel1;
            ^
  symbol:   class Wuerfel
  location: class Spieler
E:\Informatik EF\BlueJ\Spieler_Final\Spieler.java:14: error: cannot find symbol
    private Wuerfel wuerfel2;
            ^
  symbol:   class Wuerfel
  location: class Spieler
E:\Informatik EF\BlueJ\Spieler_Final\Spieler.java:15: error: cannot find symbol
    private Topf topf;
            ^
  symbol:   class Topf
  location: class Spieler
E:\Informatik EF\BlueJ\Spieler_Final\Spieler.java:23: error: cannot find symbol
    public Spieler(Wuerfel pWuerfel1, Wuerfel pWuerfel2, Topf pTopf)
                   ^
  symbol:   class Wuerfel
  location: class Spieler
E:\Informatik EF\BlueJ\Spieler_Final\Spieler.java:23: error: cannot find symbol
    public Spieler(Wuerfel pWuerfel1, Wuerfel pWuerfel2, Topf pTopf)
                                      ^
  symbol:   class Wuerfel
  location: class Spieler
E:\Informatik EF\BlueJ\Spieler_Final\Spieler.java:23: error: cannot find symbol
    public Spieler(Wuerfel pWuerfel1, Wuerfel pWuerfel2, Topf pTopf)
                                                         ^
  symbol:   class Topf
  location: class Spieler
6 errors
